Fix google map word-wrap style and specify styling of two column 'show' views.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -128,6 +128,36 @@ a { text-decoration: none; }
   @include container;
 }
 
+.show {
+
+    #primary > div, #sidebar > div {
+        border-style: solid;
+        border-width: 10px 0 0 0;
+        @include boxsizing(border-box);
+        @include padding-leader(.5);
+        @include padding-trailer(.5);
+        @include trailer(.75);
+        @include box-shadow(rgba(0,0,0,.15) 0 0 10px);
+        
+        & > *:first-child { @include leader(0); }
+        
+        & > * {
+            padding-left: 16px;
+            padding-right: 16px;
+        }
+        
+        & > ul, & ol {
+            margin-left: 16px;
+            margin-right: 16px;
+            padding-left: 1em;
+        }
+    }
+}
+
+.gm-style {
+    word-wrap: normal;
+}
+
 
 /* !---------- Navigation ---------- */
 
@@ -609,29 +639,6 @@ footer {
         }
     }
 
-    #primary > div, #sidebar > div {
-        border-style: solid;
-        border-width: 10px 0 0 0;
-        @include boxsizing(border-box);
-        @include padding-leader(.5);
-        @include padding-trailer(.5);
-        @include trailer(.75);
-        @include box-shadow(rgba(0,0,0,.15) 0 0 10px);
-        
-        & > *:first-child { @include leader(0); }
-        
-        & > * {
-            padding-left: 16px;
-            padding-right: 16px;
-        }
-        
-        & > ul, & ol {
-            margin-left: 16px;
-            margin-right: 16px;
-            padding-left: 1em;
-        }
-    }
-    
     #sidebar h3 { padding: 0 16px; }
 
 
